# orekacxx

./: .gitignore  CompileARM7wBuildroot.sh  Compilex86-64.sh  buildOnlyCoreComponents.sh  orekacompileWithBuildroot.sh  orekacompileWithBuildroottosystem.sh  whoami.sh
arm-buildroot-linux-gnueabihf_sdk-buildroot/arm-buildroot-linux-gnueabihf/lib/: libatomic.so.1.2.0  libitm.so.1.0.0  libubsan.so.1.0.0
arm-buildroot-linux-gnueabihf_sdk-buildroot/etc/dbus-1/: session.conf  system.conf
arm-buildroot-linux-gnueabihf_sdk-buildroot/etc/meson/: cross-compilation.conf  cross-compilation.conf.in
arm-buildroot-linux-gnueabihf_sdk-buildroot/include/: gmp.h
arm-buildroot-linux-gnueabihf_sdk-buildroot/include/isl/: stdint.h
arm-buildroot-linux-gnueabihf_sdk-buildroot/include/python2.7/: pyconfig.h
arm-buildroot-linux-gnueabihf_sdk-buildroot/include/python3.8/: pyconfig.h
arm-buildroot-linux-gnueabihf_sdk-buildroot/lib/: libacl.so.1.1.2253  libattr.so.1.1.2448  libblkid.so.1.1.0  libcap.so.2.27  libcc1.so.0.0.0  libcom_err.so.2.1  libconfuse.so.2.1.0  libcrypto.so.1.1  libdbus-1.so.3  libdbus-1.so.3.19.12  libdbus-c++-1.so.0.0.0  libdbus-glib-1.so.2.3.4  libe2p.so.2.3  libexpat.so.1.6.11  libext2fs.so.2.4  libfdisk.so.1.1.0  libffi.so.7.1.0  libfl.so.2.0.0  libform.so.6.1  libgio-2.0.so.0  libgio-2.0.so.0.6200.5  libglib-2.0.so.0.6200.5  libgmodule-2.0.so.0  libgmodule-2.0.so.0.6200.5  libgmp.so.10.3.2  libgobject-2.0.so.0  libgobject-2.0.so.0.6200.5  libgthread-2.0.so.0.6200.5  libisl.so.22.0.0  libkmod.so.2.3.4  libltdl.so.7.3.1  liblz4.so.1.9.2  liblzma.so.5.2.4  liblzmadec.so.0.0.0  liblzo2.so.2.0.0  libmagic.so.1.0.0  libmenu.so.6.1  libmount.so.1.1.0  libmpc.so.3.1.0  libmpfr.so.6.0.2  (+13 more)
arm-buildroot-linux-gnueabihf_sdk-buildroot/lib/pkgconfig/: blkid.pc  breakpad-client.pc  breakpad.pc  com_err.pc  dbus-1.pc  dbus-c++-1.pc  dbus-glib-1.pc  e2p.pc  expat.pc  ext2fs.pc  fdisk.pc  gio-2.0.pc  gio-unix-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc  isl.pc  libacl.pc  libattr.pc  libbcg729.pc  libcap.pc  libconfuse.pc  libcrypto.pc  libffi.pc  libkmod.pc  liblz4.pc  liblzma.pc  libmagic.pc  libpcre.pc  libpcrecpp.pc  libpcreposix.pc  libpkgconf.pc  libssl.pc  lzo2.pc  mount.pc  mpfr.pc  openssl.pc  python-2.7.pc  (+7 more)
arm-buildroot-linux-gnueabihf_sdk-buildroot/lib/python2.7/: _sysconfigdata.py
arm-buildroot-linux-gnueabihf_sdk-buildroot/lib/python3.8/: _sysconfigdata__linux_x86_64-linux-gnu.py
arm-buildroot-linux-gnueabihf_sdk-buildroot/libexec/: dbus-daemon-launch-helper  rmt
arm-buildroot-linux-gnueabihf_sdk-buildroot/libexec/awk/: grcat  pwcat
arm-buildroot-linux-gnueabihf_sdk-buildroot/sbin/: addpart  badblocks  blkdiscard  blkid  blkzone  blockdev  capsh  chcpu  ctrlaltdel  debugfs  delpart  doc_loadbios  docfdisk  dumpe2fs  e2freefrag  e2fsck  e2image  e2scrub  e2scrub_all  e2undo  e4crypt  fatlabel  fdformat  fdisk  filefrag  findfs  flash_erase  flash_lock  flash_otp_dump  flash_otp_info  flash_otp_lock  flash_otp_write  flash_unlock  flashcp  fsck  fsck.cramfs  fsck.fat  fsck.minix  fsfreeze  fstrim  (+62 more)
arm-buildroot-linux-gnueabihf_sdk-buildroot/share/: gettext
arm-buildroot-linux-gnueabihf_sdk-buildroot/share/autoconf/: autom4te.cfg
arm-buildroot-linux-gnueabihf_sdk-buildroot/share/awk/: group.awk  passwd.awk
arm-buildroot-linux-gnueabihf_sdk-buildroot/share/buildroot/: sdk-location  toolchainfile.cmake
distribution/docker/: config.xml
orkaudio/: Makefile.am  OrkAudio.cpp  configure.ac
orkaudio/audiocaptureplugins/common/: AcpConfig.h  AudioCapturePluginCommon.cpp  OrkSession.h  PacketHeaderDefs.h  SafeBuffer.cpp  SipTcp.cpp
orkaudio/audiocaptureplugins/generator/: Generator.cpp  GeneratorConfig.h  Makefile.am
orkaudio/audiocaptureplugins/sounddevice/: SoundDevice.cpp  SoundDeviceConfig.cpp  SoundDeviceConfig.h
orkaudio/audiocaptureplugins/voip/: Iax2Session.cpp  IpFragmentation.cpp  Makefile.am  VoIp.cpp  VoIpConfig.cpp  VoIpConfig.h  VoIpSession.cpp
orkaudio/filters/LiveStream/: LiveStreamFilter.cpp  LiveStreamFilter.h  LiveStreamServer.cpp  LiveStreamServer.h  LiveStreamSession.h  Makefile.am  RecorderSenderAsAFile.cpp  RecorderSenderPool.h
orkaudio/filters/g729codec/: G729Codec.h  Makefile.am
orkaudio/filters/rtpmixer/: Makefile.am
orkaudio/filters/silkcodec/: Makefile.am  SilkCodec.h
orkbasecxx/: AudioCapture.cpp  AudioCapture.h  AudioTape.cpp  AudioTape.h  BatchProcessing.cpp  BatchProcessing.h  CapturePluginProxy.cpp  CapturePluginProxy.h  CapturePort.cpp  CapturePort.h  CommandProcessing.cpp  CommandProcessing.h  Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  Daemon.cpp  Daemon.h  DirectionSelector.cpp  DirectionSelector.h  EventStreaming.h  Filter.cpp  Filter.h  ImmediateProcessing.cpp  ImmediateProcessing.h  LogManager.cpp  LogManager.h  Makefile.am  MemUtils.h  MultiThreadedServer.h  Object.h  ObjectFactory.cpp  ObjectFactory.h  OrkBase.h  OrkClient.h  OrkTrack.h  PartyFilter.h  RecorderSender.cpp  RecorderSender.h  Reporting.cpp  (+14 more)
orkbasecxx/audiofile/: AudioFile.cpp  AudioFile.h  LibSndFileFile.h  Makefile.am  MediaChunkFile.cpp  MediaChunkFile.h  OggOpusFile.h  PcmFile.cpp  PcmFile.h
orkbasecxx/filters/audiogain/: AudioGain.cpp  AudioGain.h  Makefile.am
orkbasecxx/filters/g722codec/: G722Codec.h  Makefile.am
orkbasecxx/filters/g726codecs/: G721Codec.h  Makefile.am
orkbasecxx/filters/gsm/: GsmFilters.h  Makefile.am
orkbasecxx/filters/ilbc/: IlbcFilters.h  Makefile.am
orkbasecxx/filters/opuscodec/: Makefile.am  OpusCodec.h
orkbasecxx/filters/speex/: Makefile.am  SpeexCodec.h
orkbasecxx/messages/: AddTagMsg.h  AsyncMessage.h  CaptureMsg.cpp  CaptureMsg.h  CrashMessage.h  DeleteTapeMsg.h  InitMsg.cpp  InitMsg.h  Makefile.am  Message.h  OrkaudioVersionMsg.h  PingMsg.h  ReadLoggingPropertiesMsg.h  RecordMsg.h  SyncMessage.h  TapeMsg.cpp  TapeMsg.h  TestMsg.h
orkbasecxx/serializers/: DomSerializer.cpp  DomSerializer.h  Makefile.am  Serializer.cpp  Serializer.h  SingleLineSerializer.h  UrlSerializer.h
(+725 files in other folders)
