METASOURCES = AUTO
SUBDIRS =  
noinst_LTLIBRARIES = libspeexcodec.la
libspeexcodec_la_SOURCES = SpeexCodec.cpp
INCLUDES = -I@top_srcdir@ -I../.. -I@SYSROOT@/usr/include/apr-1
 #-I@SYSROOT@/usr/include/apr-1
AM_CXXFLAGS = -O2 -D_REENTRANT -std=c++17 -Wall -Wextra -fno-omit-frame-pointer -fno-omit-frame-pointer
