METASOURCES = AUTO
SUBDIRS =  
noinst_LTLIBRARIES = libspeexcodec.la
libspeexcodec_la_SOURCES = SpeexCodec.cpp
INCLUDES = -I@top_srcdir@ -I../.. -I@SYSROOT@/usr/include/apr-1/ -I@SYSROOT@/usr/include/apr-1.0/
 #-I@SYSROOT@/usr/include/apr-1
AM_CXXFLAGS = -g -O0 -D_REENTRANT -std=c++17 -Wall -Wextra -fPIC